--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@supabase/supabase-js": "^2.43.2",
     "@types/redux-logger": "^3.0.13",
     "flowbite-react": "^0.9.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
@@ -21,6 +23,7 @@
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
